stop gallery large photos from overflowing

--- a/pipeline/static/css/pipeline.scss
+++ b/pipeline/static/css/pipeline.scss
@@ -333,6 +333,7 @@ ul.pagination {
 
 .template-articlepage .photo-gallery .large-photo img {
   max-height: 100%;
+  max-width: 100%;
   width: auto;
 }
 
